# ERP

./: Accelerometers-README.rtf  ERP-Monitors-README.txt  Geophone-Start-Up.rtf  Makefile  README.md
ADXL355/: Record_Accels.m  adxl355.py  record.py  record_input.txt
ERP-perimeter-fence-monitor/ERP_Data_Processing/: analyze_accel_data.R  analyze_audio_data.R  plot_adio_data.R
ERP-perimeter-fence-monitor/erp_accel/: erp_accel.ino
ERP-perimeter-fence-monitor/erp_adc/: erp_adc.ino
ERP-perimeter-fence-monitor/erp_reader/: audio.py  decode.py  plotter.py  serial_test.py
Farm_Sensor_Heatmap-main/: README.md
MATLAB/: README-data.txt  SSDV1.m  SSDV1cow.m  SSDV1cowgrnd.m  SSDV1eleph.m  SSDV1elephgrnd.m  SSDV1vehicle.m  YOLOV2.m  YOLOV2cow.m  YOLOV2cowgrnd.m  YOLOV2eleph.m  YOLOV2elephgrnd.m  YOLOV2vehicle.m  cowDatasetGroundTruth.mat  eleDatasetGroundTruth.mat  groundElephantDatasetGroundTruth.mat  groundcowDatasetGroundTruth.mat  satVehicleDatasetGroundTruth.mat
audio/emvia-master/: Makefile  (+3 more)
config/: dnsmasq.conf  hostapd.conf  hostapd.service  resolv_dnsmasq.conf  wpa_supplicant.conf
geophone/: README.md  README.txt
motion/motion-detect/: CMakeLists.txt  gpstest.cpp  motion_detector.cpp
scripts/: access_point.sh  access_point_gps.sh  acoustic.service  obspy_install.sh
simpler-capture-4/: Makefile  brighten.cpp  gstream-cap.cpp
src/: main.py  trigger.py
vocalization-ML/: ML-elephants (1).ipynb  ML-elephants.ipynb  ML_elephants.ipynb  README  modeltesting.py
web-services-logging/: Dockerfile  data_retrieval.py  docker-compose.yml  requirements.txt
(+118 files in other folders)
